Correção da apikey do api.yml e uso do editor.swagger.io
