# service/src/main/java/br/com/sw2you/realmeet/controller/RoomController.java
@@ -24,8 +24,8 @@ public class RoomController implements RoomsApi {
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<RoomDTO>> getRoom(String apiKey, Long id) {
-//    public CompletableFuture<ResponseEntity<RoomDTO>> getRoom(Long id) {
+//    public CompletableFuture<ResponseEntity<RoomDTO>> getRoom(String apiKey, Long id) {
+    public CompletableFuture<ResponseEntity<RoomDTO>> getRoom(Long id) {
         Objects.requireNonNull(id);
         //return CompletableFuture.supplyAsync(()-> ResponseEntity.ok(roomService.getRoom(id)));
         return CompletableFuture.supplyAsync(()-> roomService.getRoom(id), controllerExecutor).thenApply(ResponseEntityUtils::ok);
