# service/src/main/resources/api.yml
@@ -13,7 +13,6 @@ paths:
       tags:
         - room
       parameters:
-        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -37,7 +36,6 @@ paths:
       tags:
         - room
       parameters:
-        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -57,7 +55,6 @@ paths:
       tags:
         - room
       parameters:
-        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -85,8 +82,6 @@ paths:
       operationId: createRoom
       tags:
         - room
-      parameters:
-        - $ref: '#/components/parameters/apiKey'
       requestBody:
         content:
           application/json:
@@ -110,7 +105,6 @@ paths:
       tags:
         - allocation
       parameters:
-        - $ref: '#/components/parameters/apiKey'
         - name: employeeEmail
           in: query
           description: Email of the employee
@@ -153,8 +147,6 @@ paths:
       operationId: createAllocation
       tags:
         - allocation
-      parameters:
-        - $ref: '#/components/parameters/apiKey'
       requestBody:
         content:
           application/json:
@@ -180,7 +172,6 @@ paths:
       tags:
         - allocation
       parameters:
-        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -202,7 +193,6 @@ paths:
       tags:
         - allocation
       parameters:
-        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -231,7 +221,6 @@ paths:
       summary: Generates the allocation report
       operationId: createAllocationReport
       parameters:
-        - $ref: '#/components/parameters/apiKey'
         - name: email
           in: query
           description: The e-mail to send the report
